--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -31,8 +31,12 @@ tasks:
     init: docker pull redis
     command: 'docker run -p 6379:6379 --name redis --net="host" --rm redis'
 
+  - name: Mailhog
+    init: docker pull mailhog/mailhog
+    command: 'docker run --rm --net="host" --name=mailhog -p 1025:1025 -p 8025:8025 mailhog/mailhog'
+
   - name: CrispCMS
-    init: git clone https://github.com/jrb-it/crispcms /workspace/crispcms && cd /workspace/crispcms/cms && composer install && cd ${GITPOD_REPO_ROOT} && docker pull registry.jrbit.de/crispcms/core/en_us:latest && cd public/includes/class && composer install
+    init: git clone https://github.com/jrb-it/crispcms /workspace/crispcms && cd /workspace/crispcms/cms && composer install && cd ${GITPOD_REPO_ROOT} && docker pull registry.jrbit.de/crispcms/core/en_us:latest
     command: gp ports await 5432 && gp ports await 6379 && docker run --name crispcms
              -e CRISP_THEME=crisptheme
              -e VERBOSITY=3
@@ -43,17 +47,18 @@ tasks:
              -e HOST=$(gp url 80 | sed -E 's_^https?://__')
              -e ROOT=$(gp url 80 | sed -E 's_^https?://__')
              -e PROTO=https
-             -e SENTRY_DSN=https://e7652b1efeb846e3a02eae980a4cd147@sentry.internal.jrbit.de/30
+             -e SENTRY_DSN=https://e1335d78665742d0bbd9a67935dbc6ed@sentry.internal.jrbit.de/5
              -e ENVIRONMENT=development
              -e FLAGSMITH_APP_URL=https://flagsmith.internal.jrbit.de/api/v1/
              -e FLAGSMITH_API_KEY=${FLAGSMITH_API_KEY}
              -e CRISP_FLAGSMITH_API_KEY=K8BJRBi6xiE3HweHoRQhQA
-             -e SENTRY_JS_DSN=https://sentry.internal.jrbit.de/js-sdk-loader/e7652b1efeb846e3a02eae980a4cd147.min.js
+             -e SENTRY_JS_DSN=https://sentry.internal.jrbit.de/js-sdk-loader/e1335d78665742d0bbd9a67935dbc6ed.min.js
              -v ${GITPOD_REPO_ROOT}/theme:/var/www/crisp/themes/crisptheme
              -p 80:80
              -p 81:81
              --net="host"
-             registry.jrbit.de/crispcms/core/de_de:latest
+             --rm
+             registry.jrbit.de/crispcms/core/en_us:latest
 vscode:
   extensions:
     - ms-azuretools.vscode-docker
